src/objects/SubstanceAbuseAssessment__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>SubstanceAbuseAssessments1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRAFFT_A1_Drink_any_alcohol__c</fullName>
        <label>CRAFFT A1 Drink any alcohol?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_A2_Smoke_any_marijuana_or_hashish__c</fullName>
        <label>CRAFFT A2 Smoke any marijuana or hashish</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_A3_Use_anything_else_to_get_high__c</fullName>
        <label>CRAFFT A3 Use anything else to get high?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B1_In_CAR_driven_by_someone_high__c</fullName>
        <label>CRAFFT B1 In CAR driven by someone high?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B2_Use_drugs_or_alcohol_to_RELAX__c</fullName>
        <label>CRAFFT B2  Use drugs or alcohol to RELAX</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B3_Use_drugs_or_alcohol_ALONE__c</fullName>
        <label>CRAFFT B3 Use drugs or alcohol ALONE?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B4_Ever_FORGET_what_you_did__c</fullName>
        <label>CRAFFT B4 Ever FORGET what you did</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B5_FAMILY_FRIENDS_say_to_cut_down__c</fullName>
        <label>CRAFFT B5 FAMILY/FRIENDS say to cut down</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B6_In_TROUBLE_while_using_drugs__c</fullName>
        <label>CRAFFT B6  In TROUBLE while using drugs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Substance_Abuse_Problems__c</fullName>
        <label>Current Substance Abuse Problems</label>
        <picklist>
            <picklistValues>
                <fullName>Current SA Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA Use History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No SA Use</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Insurance__c</fullName>
        <label>Do you have Insurance?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drug_Test_Frequency__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Drug Test Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Biweekly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drugs_Used_Other__c</fullName>
        <label>Drugs Used (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drugs_Used__c</fullName>
        <description>Copied to Contact when assessment complete: Substance Abuse
Copied from Contact when Assessment saved until completion: Psychosocial</description>
        <inlineHelpText>Check any substances ever used by participant.</inlineHelpText>
        <label>Drugs Used</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants - Mild</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Have_had_treatment__c</fullName>
        <label>Have had treatment?</label>
        <picklist>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient and Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Prior Treatment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indication_of_Phys_Health_Problem__c</fullName>
        <label>Indication of Phys Health Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuberculosis</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Number__c</fullName>
        <label>Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Insurance Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <label>Legacy Database Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phys_Health_Problem__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Other Phys Health Problem</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Section_1__c</fullName>
        <label>Physical Health Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_Section_1__c</fullName>
        <label>Substance Abuse Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_at_Interview__c</fullName>
        <label>Substance Abuse at Interview</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tried_to_stop_using_on_your_own__c</fullName>
        <label>Tried to stop using on your own?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Drugs_Used_Other__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Drugs Used (Other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Update_Has_Insurance__c</fullName>
        <label>Update Has Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Indication_of_Phys_Health_Problem__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Indication of Phys Health Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuberculosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Update_Insurance_Number__c</fullName>
        <label>Update Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Insurance_Provider__c</fullName>
        <label>Update Insurance Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Other_Phys_Health_Problem__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Other Phys Health Problem</label>
        <type>TextArea</type>
    </fields>
    <label>aSubstanceAbuse</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>SubstanceAbuseAssessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aSubstanceAbuse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>